--- a/packages.config
+++ b/packages.config
@@ -17,7 +17,7 @@
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="Syncfusion.Compression.Base" version="16.4.0.52" targetFramework="net45" />
   <package id="Syncfusion.DocIO.AspNet.Mvc5" version="16.4.0.52" targetFramework="net45" />
-  <package id="Syncfusion.DocToPdfConverter.AspNet.Mvc5" version="16.3.0.17" targetFramework="net45" requireReinstallation="true" />
+  <package id="Syncfusion.DocToPDFConverter.AspNet.Mvc5" version="16.4.0.52" targetFramework="net45" />
   <package id="Syncfusion.EJ2.MVC5" version="16.4.0.52" targetFramework="net45" />
   <package id="Syncfusion.EJ2.PdfViewer.AspNet.Mvc5" version="16.4.0.52" targetFramework="net45" />
   <package id="Syncfusion.EJ2.WordEditor.AspNet.Mvc5" version="16.4.0.52" targetFramework="net45" />
@@ -29,7 +29,7 @@
   <package id="Syncfusion.OfficeChartToImageConverter.AspNet.Mvc5" version="16.4.0.52" targetFramework="net45" />
   <package id="Syncfusion.Pdf.AspNet.Mvc5" version="16.4.0.52" targetFramework="net45" />
   <package id="Syncfusion.Presentation.AspNet.Mvc5" version="16.4.0.52" targetFramework="net45" />
-  <package id="Syncfusion.PresentationToPdfConverter.AspNet.Mvc5" version="16.3.0.17" targetFramework="net45" requireReinstallation="true" />
+  <package id="Syncfusion.PresentationToPdfConverter.AspNet.Mvc5" version="16.4.0.52" targetFramework="net45" />
   <package id="Syncfusion.SfChart.WPF" version="16.3.0.17" targetFramework="net45" requireReinstallation="true" />
   <package id="Syncfusion.XlsIO.AspNet.Mvc5" version="16.4.0.52" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
