--- a/EJ2MVCSampleBrowser.csproj
+++ b/EJ2MVCSampleBrowser.csproj
@@ -67,62 +67,62 @@
       <HintPath>packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.EJ2">
-      <HintPath>packages\Syncfusion.EJ2.MVC5.18.3.0.35\lib\net45\Syncfusion.EJ2.dll</HintPath>
+      <HintPath>packages\Syncfusion.EJ2.MVC5.18.4.0.30\lib\net45\Syncfusion.EJ2.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.HtmlConverter.Base">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\Syncfusion.HtmlToPdfConverter.IE.AspNet.Mvc5.18.3.0.35\lib\net45\Syncfusion.HtmlConverter.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.HtmlToPdfConverter.IE.AspNet.Mvc5.18.4.0.30\lib\net45\Syncfusion.HtmlConverter.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.Pdf.Base">
-      <HintPath>packages\Syncfusion.Pdf.AspNet.Mvc5.18.3.0.35\lib\net45\Syncfusion.Pdf.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.Pdf.AspNet.Mvc5.18.4.0.30\lib\net45\Syncfusion.Pdf.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.DocIO.Base">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\Syncfusion.DocIO.AspNet.Mvc5.18.3.0.35\lib\net45\Syncfusion.DocIO.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.DocIO.AspNet.Mvc5.18.4.0.30\lib\net45\Syncfusion.DocIO.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.EJ2.DocumentEditor">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\Syncfusion.EJ2.WordEditor.AspNet.Mvc5.18.3.0.35\lib\net45\Syncfusion.EJ2.DocumentEditor.dll</HintPath>
+      <HintPath>packages\Syncfusion.EJ2.WordEditor.AspNet.Mvc5.18.4.0.30\lib\net45\Syncfusion.EJ2.DocumentEditor.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.EJ2.PdfViewer">
-      <HintPath>packages\Syncfusion.EJ2.PdfViewer.AspNet.Mvc5.18.3.0.35\lib\net45\Syncfusion.EJ2.PdfViewer.dll</HintPath>
+      <HintPath>packages\Syncfusion.EJ2.PdfViewer.AspNet.Mvc5.18.4.0.30\lib\net45\Syncfusion.EJ2.PdfViewer.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.OfficeChartToImageConverter.Wpf">
-      <HintPath>packages\Syncfusion.OfficeChartToImageConverter.AspNet.Mvc5.18.3.0.35\lib\net45\Syncfusion.OfficeChartToImageConverter.Wpf.dll</HintPath>
+      <HintPath>packages\Syncfusion.OfficeChartToImageConverter.AspNet.Mvc5.18.4.0.30\lib\net45\Syncfusion.OfficeChartToImageConverter.Wpf.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.DocToPdfConverter.Base">
-      <HintPath>packages\Syncfusion.DocToPdfConverter.AspNet.Mvc5.18.3.0.35\lib\net45\Syncfusion.DocToPdfConverter.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.DocToPdfConverter.AspNet.Mvc5.18.4.0.30\lib\net45\Syncfusion.DocToPdfConverter.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.Compression.Base">
-      <HintPath>packages\Syncfusion.Compression.Base.18.3.0.35\lib\net45\Syncfusion.Compression.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.Compression.Base.18.4.0.30\lib\net45\Syncfusion.Compression.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.OfficeChart.Base">
-      <HintPath>packages\Syncfusion.OfficeChart.Base.18.3.0.35\lib\net45\Syncfusion.OfficeChart.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.OfficeChart.Base.18.4.0.30\lib\net45\Syncfusion.OfficeChart.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.Presentation.Base">
-      <HintPath>packages\Syncfusion.Presentation.AspNet.Mvc5.18.3.0.35\lib\net45\Syncfusion.Presentation.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.Presentation.AspNet.Mvc5.18.4.0.30\lib\net45\Syncfusion.Presentation.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.PresentationToPdfConverter.Base">
-      <HintPath>packages\Syncfusion.PresentationToPdfConverter.AspNet.Mvc5.18.3.0.35\lib\net45\Syncfusion.PresentationToPdfConverter.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.PresentationToPdfConverter.AspNet.Mvc5.18.4.0.30\lib\net45\Syncfusion.PresentationToPdfConverter.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.ExcelChartToImageConverter.Wpf">
-      <HintPath>packages\Syncfusion.ExcelChartToImageConverter.AspNet.Mvc5.18.3.0.35\lib\net45\Syncfusion.ExcelChartToImageConverter.Wpf.dll</HintPath>
+      <HintPath>packages\Syncfusion.ExcelChartToImageConverter.AspNet.Mvc5.18.4.0.30\lib\net45\Syncfusion.ExcelChartToImageConverter.Wpf.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.ExcelToPdfConverter.Base">
-      <HintPath>packages\Syncfusion.ExcelToPdfConverter.AspNet.Mvc5.18.3.0.35\lib\net45\Syncfusion.ExcelToPdfConverter.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.ExcelToPdfConverter.AspNet.Mvc5.18.4.0.30\lib\net45\Syncfusion.ExcelToPdfConverter.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.SfChart.WPF">
-      <HintPath>packages\Syncfusion.SfChart.WPF.18.3.0.35\lib\net45\Syncfusion.SfChart.WPF.dll</HintPath>
+      <HintPath>packages\Syncfusion.SfChart.WPF.18.4.0.30\lib\net45\Syncfusion.SfChart.WPF.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.XlsIO.Base">
-      <HintPath>packages\Syncfusion.XlsIO.AspNet.Mvc5.18.3.0.35\lib\net45\Syncfusion.XlsIO.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.XlsIO.AspNet.Mvc5.18.4.0.30\lib\net45\Syncfusion.XlsIO.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.EJ2.Spreadsheet">
-      <HintPath>packages\Syncfusion.EJ2.Spreadsheet.AspNet.MVC5.18.3.0.35\lib\net45\Syncfusion.EJ2.Spreadsheet.dll</HintPath>
+      <HintPath>packages\Syncfusion.EJ2.Spreadsheet.AspNet.MVC5.18.4.0.30\lib\net45\Syncfusion.EJ2.Spreadsheet.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.Licensing">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\Syncfusion.Licensing.18.3.0.35\lib\net45\Syncfusion.Licensing.dll</HintPath>
+      <HintPath>packages\Syncfusion.Licensing.18.4.0.30\lib\net45\Syncfusion.Licensing.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -227,17 +227,20 @@
     <Compile Include="Controllers\DashboardLayout\EditableLayoutController.cs" />
     <Compile Include="Controllers\DashboardLayout\PredefinedLayoutsController.cs" />
     <Compile Include="Controllers\DashboardLayout\SEOAnalyticsController.cs" />
+    <Compile Include="Controllers\Diagram\VirtualizationController.cs" />
     <Compile Include="Controllers\Diagram\LineRoutingController.cs" />
     <Compile Include="Controllers\DocumentEditor\AutoSaveController.cs" />
     <Compile Include="Controllers\DocumentEditor\ChartController.cs" />
     <Compile Include="Controllers\DocumentEditor\CommentsController.cs" />
     <Compile Include="Controllers\DocumentEditor\CustomContextMenuController.cs" />
     <Compile Include="Controllers\DocumentEditor\MailMergeController.cs" />
+    <Compile Include="Controllers\DocumentEditor\Notes.cs" />
     <Compile Include="Controllers\DocumentEditor\ToolbarCustomizationController.cs" />
     <Compile Include="Controllers\DocumentEditor\DocumentProtectionController.cs" />
     <Compile Include="Controllers\DocumentEditor\RightToLeft.cs" />
     <Compile Include="Controllers\Gantt\ResourceMultiTaskbarController.cs" />
     <Compile Include="Controllers\Gantt\ResourceViewController.cs" />
+    <Compile Include="Controllers\Gantt\SplitTasksController.cs" />
     <Compile Include="Controllers\Gantt\TaskModeController.cs" />
     <Compile Include="Controllers\Gantt\BaselineController.cs" />
     <Compile Include="Controllers\Gantt\ColumnMenuController.cs" />
@@ -271,12 +274,14 @@
     <Compile Include="Controllers\Gantt\ToolbarTemplateController.cs" />
     <Compile Include="Controllers\Gantt\TooltipTemplateController.cs" />
     <Compile Include="Controllers\Gantt\UnscheduledTaskController.cs" />
+    <Compile Include="Controllers\Gantt\VirtualScrollController.cs" />
     <Compile Include="Controllers\Gantt\WorkingTimeRangeController.cs" />
     <Compile Include="Controllers\Gantt\WorkWeekController.cs" />
     <Compile Include="Controllers\Gantt\ZoomingController.cs" />
     <Compile Include="Controllers\Grid\DragAndDropWithInGridController.cs" />
     <Compile Include="Controllers\Grid\InfiniteScrollingController.cs" />
     <Compile Include="Controllers\Grid\LazyLoadGroupController.cs" />
+    <Compile Include="Controllers\Grid\FrozenAPIController.cs" />
     <Compile Include="Controllers\Grid\MasterDetailsExportController.cs" />
     <Compile Include="Controllers\Accordion\AjaxContentController.cs" />
     <Compile Include="Controllers\Accordion\DefaultFunctionalitiesController.cs" />
@@ -473,6 +478,7 @@
     <Compile Include="Controllers\Kanban\SearchFilterController.cs" />
     <Compile Include="Controllers\Kanban\SortingController.cs" />
     <Compile Include="Controllers\Kanban\SwimlaneController.cs" />
+    <Compile Include="Controllers\Kanban\WorkflowController.cs" />
     <Compile Include="Controllers\Kanban\StackedHeaderController.cs" />
     <Compile Include="Controllers\Kanban\LocalDataController.cs" />
     <Compile Include="Controllers\Kanban\RemoteDataController.cs" />
@@ -931,6 +937,7 @@
     <Compile Include="Controllers\RichTextEditor\EventsController.cs" />
     <Compile Include="Controllers\RichTextEditor\AutoSaveController.cs" />
     <Compile Include="Controllers\RichTextEditor\RichTextEditorForController.cs" />
+    <Compile Include="Controllers\RichTextEditor\FileBrowserController.cs" />
     <Compile Include="Controllers\RichTextEditor\ForumsController.cs" />
     <Compile Include="Controllers\RichTextEditor\IFrameController.cs" />
     <Compile Include="Controllers\RichTextEditor\ImageController.cs" />
@@ -952,6 +959,7 @@
     <Compile Include="Controllers\Schedule\CellTemplateController.cs" />
     <Compile Include="Controllers\Schedule\QuickInfoTemplateController.cs" />
     <Compile Include="Controllers\Schedule\InlineEditingController.cs" />
+    <Compile Include="Controllers\Schedule\OverviewController.cs" />
     <Compile Include="Controllers\Schedule\ContextMenuController.cs" />
     <Compile Include="Controllers\Schedule\DateHeaderController.cs" />
     <Compile Include="Controllers\Schedule\DayHourLimitController.cs" />
@@ -1234,6 +1242,7 @@
     <Compile Include="Controllers\XlsIO\FunnelChartController.cs" />
     <Compile Include="Controllers\XlsIO\GroupShapesController.cs" />
     <Compile Include="Controllers\XlsIO\ImportJSONController.cs" />
+    <Compile Include="Controllers\XlsIO\ImportExportDataTableController.cs" />
     <Compile Include="Controllers\XlsIO\InteractiveFeaturesController.cs" />
     <Compile Include="Controllers\XlsIO\PerformanceController.cs" />
     <Compile Include="Controllers\XlsIO\PivotChartController.cs" />
@@ -1322,6 +1331,7 @@
     <Compile Include="Controllers\DocumentEditor\TrackChangesController.cs" />
     <Compile Include="Controllers\DocumentEditor\FormFieldsController.cs" />
     <Compile Include="Controllers\Spreadsheet\ImageController.cs" />
+    <Compile Include="Controllers\Spreadsheet\ChartController.cs" />
     <Content Include="Views\XlsIO\HTMLToWorksheet.cshtml" />
     <Compile Include="webapi\DocumentEditor\DocumentEditorServiceController.cs" />
     <Compile Include="webapi\PdfViewer\PdfViewerController.cs" />
@@ -2254,6 +2264,7 @@
     <Content Include="Scripts\documenteditor\data-FormFields.json" />
     <Content Include="Scripts\documenteditor\data-TrackChanges.json" />
     <Content Include="Scripts\documenteditor\data-mailmerge.json" />
+    <Content Include="Scripts\documenteditor\data-notes.json" />
     <None Include="Scripts\_references.js" />
     <Content Include="SyncfusionLicense.txt" />
     <EmbeddedResource Include="App_Data\XlsIO\bahnschrift.ttf" />
@@ -2864,6 +2875,7 @@
     <Content Include="Views\RichTextEditor\Print.cshtml" />
     <Content Include="Views\RichTextEditor\Types.cshtml" />
     <Content Include="Views\RichTextEditor\RichTextEditorFor.cshtml" />
+    <Content Include="Views\RichTextEditor\FileBrowser.cshtml" />
     <Content Include="Views\RichTextEditor\Tribute.cshtml" />
     <Content Include="Views\RichTextEditor\AutoSave.cshtml" />
     <Content Include="Views\Schedule\AddRemoveResources.cshtml" />
@@ -3041,6 +3053,7 @@
     <Content Include="Views\XlsIO\FunnelChart.cshtml" />
     <Content Include="Views\XlsIO\GroupShapes.cshtml" />
     <Content Include="Views\XlsIO\ImportJSON.cshtml" />
+    <Content Include="Views\XlsIO\ImportExportDataTable.cshtml" />
     <Content Include="Views\XlsIO\InteractiveFeatures.cshtml" />
     <Content Include="Views\XlsIO\Invoice.cshtml" />
     <Content Include="Views\XlsIO\Performance.cshtml" />
@@ -3298,6 +3311,7 @@
     <Content Include="Views\Kanban\DialogEditing.cshtml" />
     <Content Include="Views\Kanban\SearchFilter.cshtml" />
     <Content Include="Views\Kanban\Sorting.cshtml" />
+    <Content Include="Views\Kanban\Workflow.cshtml" />
     <Content Include="Views\Kanban\LocalData.cshtml" />
     <Content Include="Views\Kanban\RemoteData.cshtml" />
     <Content Include="Views\Kanban\HeaderTemplate.cshtml" />
@@ -3315,12 +3329,14 @@
     <Content Include="Views\Gantt\TaskMode.cshtml" />
     <Content Include="Views\Grid\InfiniteScrolling.cshtml" />
     <Content Include="Views\Grid\LazyLoadGroup.cshtml" />
+    <Content Include="Views\Grid\FrozenAPI.cshtml" />
     <Content Include="Views\Gantt\ResourceView.cshtml" />
     <Content Include="Views\BulletChart\Legend.cshtml" />
     <Content Include="Views\ProgressBar\Labels.cshtml" />
     <Content Include="Views\Spreadsheet\CellTemplates.cshtml" />
     <Content Include="Views\Spreadsheet\SortingFiltering.cshtml" />
     <Content Include="Views\Spreadsheet\ProtectSheet.cshtml" />
+    <Content Include="Views\Schedule\Overview.cshtml" />
     <Content Include="Views\Maps\locale.json" />
     <Content Include="Views\DocumentEditor\FormFields.cshtml" />
     <Content Include="Views\DocumentEditor\TrackChanges.cshtml" />
@@ -3332,6 +3348,10 @@
     <Content Include="Views\DocumentEditor\MailMerge.cshtml" />
     <Content Include="Views\Spreadsheet\Image.cshtml" />
     <Content Include="Views\Chart\StackedStepArea.cshtml" />
+    <Content Include="Views\Diagram\Virtualization.cshtml" />
+    <Content Include="Views\Spreadsheet\Chart.cshtml" />
+	<Content Include="Views\Gantt\VirtualScroll.cshtml" />
+    <Content Include="Views\Gantt\SplitTasks.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\MapData\Africa_continent.json" />
