--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
@@ -23,23 +23,23 @@
   <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
-  <package id="Syncfusion.Compression.Base" version="18.3.0.35" targetFramework="net45" requireReinstallation="true" />
-  <package id="Syncfusion.DocIO.AspNet.Mvc5" version="18.3.0.35" targetFramework="net45" requireReinstallation="true" />
-  <package id="Syncfusion.DocToPdfConverter.AspNet.Mvc5" version="18.3.0.35" targetFramework="net45" requireReinstallation="true" />
-  <package id="Syncfusion.EJ2.MVC5" version="18.3.0.35" targetFramework="net45" />
-  <package id="Syncfusion.EJ2.PdfViewer.AspNet.Mvc5" version="18.3.0.35" targetFramework="net45" />
-  <package id="Syncfusion.EJ2.WordEditor.AspNet.Mvc5" version="18.3.0.35" targetFramework="net45" />
-  <package id="Syncfusion.ExcelChartToImageConverter.AspNet.Mvc5" version="18.3.0.35" targetFramework="net45" requireReinstallation="true" />
-  <package id="Syncfusion.ExcelToPdfConverter.AspNet.Mvc5" version="18.3.0.35" targetFramework="net45" requireReinstallation="true" />
-  <package id="Syncfusion.HtmlToPdfConverter.IE.AspNet.Mvc5" version="18.3.0.35" targetFramework="net45" requireReinstallation="true" />
-  <package id="Syncfusion.Licensing" version="18.3.0.35" targetFramework="net45" requireReinstallation="true" />
-  <package id="Syncfusion.OfficeChart.Base" version="18.3.0.35" targetFramework="net45" requireReinstallation="true" />
-  <package id="Syncfusion.OfficeChartToImageConverter.AspNet.Mvc5" version="18.3.0.35" targetFramework="net45" requireReinstallation="true" />
-  <package id="Syncfusion.Pdf.AspNet.Mvc5" version="18.3.0.35" targetFramework="net45" requireReinstallation="true" />
-  <package id="Syncfusion.Presentation.AspNet.Mvc5" version="18.3.0.35" targetFramework="net45" requireReinstallation="true" />
-  <package id="Syncfusion.PresentationToPdfConverter.AspNet.Mvc5" version="18.3.0.35" targetFramework="net45" requireReinstallation="true" />
-  <package id="Syncfusion.SfChart.WPF" version="18.3.0.35" targetFramework="net45" requireReinstallation="true" />
-  <package id="Syncfusion.XlsIO.AspNet.Mvc5" version="18.3.0.35" targetFramework="net45" requireReinstallation="true" />
-  <package id="Syncfusion.EJ2.Spreadsheet.AspNet.MVC5" version="18.3.0.35" targetFramework="net45" />
+  <package id="Syncfusion.Compression.Base" version="18.4.0.30" targetFramework="net45" requireReinstallation="true" />
+  <package id="Syncfusion.DocIO.AspNet.Mvc5" version="18.4.0.30" targetFramework="net45" requireReinstallation="true" />
+  <package id="Syncfusion.DocToPdfConverter.AspNet.Mvc5" version="18.4.0.30" targetFramework="net45" requireReinstallation="true" />
+  <package id="Syncfusion.EJ2.MVC5" version="18.4.0.30" targetFramework="net45" />
+  <package id="Syncfusion.EJ2.PdfViewer.AspNet.Mvc5" version="18.4.0.30" targetFramework="net45" />
+  <package id="Syncfusion.EJ2.WordEditor.AspNet.Mvc5" version="18.4.0.30" targetFramework="net45" />
+  <package id="Syncfusion.ExcelChartToImageConverter.AspNet.Mvc5" version="18.4.0.30" targetFramework="net45" requireReinstallation="true" />
+  <package id="Syncfusion.ExcelToPdfConverter.AspNet.Mvc5" version="18.4.0.30" targetFramework="net45" requireReinstallation="true" />
+  <package id="Syncfusion.HtmlToPdfConverter.IE.AspNet.Mvc5" version="18.4.0.30" targetFramework="net45" requireReinstallation="true" />
+  <package id="Syncfusion.Licensing" version="18.4.0.30" targetFramework="net45" requireReinstallation="true" />
+  <package id="Syncfusion.OfficeChart.Base" version="18.4.0.30" targetFramework="net45" requireReinstallation="true" />
+  <package id="Syncfusion.OfficeChartToImageConverter.AspNet.Mvc5" version="18.4.0.30" targetFramework="net45" requireReinstallation="true" />
+  <package id="Syncfusion.Pdf.AspNet.Mvc5" version="18.4.0.30" targetFramework="net45" requireReinstallation="true" />
+  <package id="Syncfusion.Presentation.AspNet.Mvc5" version="18.4.0.30" targetFramework="net45" requireReinstallation="true" />
+  <package id="Syncfusion.PresentationToPdfConverter.AspNet.Mvc5" version="18.4.0.30" targetFramework="net45" requireReinstallation="true" />
+  <package id="Syncfusion.SfChart.WPF" version="18.4.0.30" targetFramework="net45" requireReinstallation="true" />
+  <package id="Syncfusion.XlsIO.AspNet.Mvc5" version="18.4.0.30" targetFramework="net45" requireReinstallation="true" />
+  <package id="Syncfusion.EJ2.Spreadsheet.AspNet.MVC5" version="18.4.0.30" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
