--- a/EJ2MVCSampleBrowser.csproj
+++ b/EJ2MVCSampleBrowser.csproj
@@ -67,64 +67,64 @@
       <HintPath>packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.EJ2">
-      <HintPath>packages\Syncfusion.EJ2.MVC5.19.4.0.38\lib\net45\Syncfusion.EJ2.dll</HintPath>
+      <HintPath>packages\Syncfusion.EJ2.MVC5.19.4.0.48\lib\net45\Syncfusion.EJ2.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.EJ2.GridExport">
-      <HintPath>packages\Syncfusion.EJ2.GridExport.MVC5.19.4.0.38\lib\net45\Syncfusion.EJ2.GridExport.dll</HintPath>
+      <HintPath>packages\Syncfusion.EJ2.GridExport.MVC5.19.4.0.48\lib\net45\Syncfusion.EJ2.GridExport.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.Pdf.Base">
-      <HintPath>packages\Syncfusion.Pdf.AspNet.Mvc5.19.4.0.38\lib\net45\Syncfusion.Pdf.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.Pdf.AspNet.Mvc5.19.4.0.48\lib\net45\Syncfusion.Pdf.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.HtmlConverter.Base">
-      <HintPath>packages\Syncfusion.HtmlToPdfConverter.IE.AspNet.Mvc5.19.4.0.38\lib\net45\Syncfusion.HtmlConverter.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.HtmlToPdfConverter.IE.AspNet.Mvc5.19.4.0.48\lib\net45\Syncfusion.HtmlConverter.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.DocIO.Base">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\Syncfusion.DocIO.AspNet.Mvc5.19.4.0.38\lib\net45\Syncfusion.DocIO.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.DocIO.AspNet.Mvc5.19.4.0.48\lib\net45\Syncfusion.DocIO.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.EJ2.DocumentEditor">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\Syncfusion.EJ2.WordEditor.AspNet.Mvc5.19.4.0.38\lib\net45\Syncfusion.EJ2.DocumentEditor.dll</HintPath>
+      <HintPath>packages\Syncfusion.EJ2.WordEditor.AspNet.Mvc5.19.4.0.48\lib\net45\Syncfusion.EJ2.DocumentEditor.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.EJ2.PdfViewer">
-      <HintPath>packages\Syncfusion.EJ2.PdfViewer.AspNet.Mvc5.19.4.0.38\lib\net45\Syncfusion.EJ2.PdfViewer.dll</HintPath>
+      <HintPath>packages\Syncfusion.EJ2.PdfViewer.AspNet.Mvc5.19.4.0.48\lib\net45\Syncfusion.EJ2.PdfViewer.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.OfficeChartToImageConverter.Wpf">
-      <HintPath>packages\Syncfusion.OfficeChartToImageConverter.AspNet.Mvc5.19.4.0.38\lib\net45\Syncfusion.OfficeChartToImageConverter.Wpf.dll</HintPath>
+      <HintPath>packages\Syncfusion.OfficeChartToImageConverter.AspNet.Mvc5.19.4.0.48\lib\net45\Syncfusion.OfficeChartToImageConverter.Wpf.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.DocToPdfConverter.Base">
-      <HintPath>packages\Syncfusion.DocToPdfConverter.AspNet.Mvc5.19.4.0.38\lib\net45\Syncfusion.DocToPdfConverter.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.DocToPdfConverter.AspNet.Mvc5.19.4.0.48\lib\net45\Syncfusion.DocToPdfConverter.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.Compression.Base">
-      <HintPath>packages\Syncfusion.Compression.Base.19.4.0.38\lib\net45\Syncfusion.Compression.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.Compression.Base.19.4.0.48\lib\net45\Syncfusion.Compression.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.OfficeChart.Base">
-      <HintPath>packages\Syncfusion.OfficeChart.Base.19.4.0.38\lib\net45\Syncfusion.OfficeChart.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.OfficeChart.Base.19.4.0.48\lib\net45\Syncfusion.OfficeChart.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.Presentation.Base">
-      <HintPath>packages\Syncfusion.Presentation.AspNet.Mvc5.19.4.0.38\lib\net45\Syncfusion.Presentation.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.Presentation.AspNet.Mvc5.19.4.0.48\lib\net45\Syncfusion.Presentation.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.PresentationToPdfConverter.Base">
-      <HintPath>packages\Syncfusion.PresentationToPdfConverter.AspNet.Mvc5.19.4.0.38\lib\net45\Syncfusion.PresentationToPdfConverter.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.PresentationToPdfConverter.AspNet.Mvc5.19.4.0.48\lib\net45\Syncfusion.PresentationToPdfConverter.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.ExcelChartToImageConverter.Wpf">
-      <HintPath>packages\Syncfusion.ExcelChartToImageConverter.AspNet.Mvc5.19.4.0.38\lib\net45\Syncfusion.ExcelChartToImageConverter.Wpf.dll</HintPath>
+      <HintPath>packages\Syncfusion.ExcelChartToImageConverter.AspNet.Mvc5.19.4.0.48\lib\net45\Syncfusion.ExcelChartToImageConverter.Wpf.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.ExcelToPdfConverter.Base">
-      <HintPath>packages\Syncfusion.ExcelToPdfConverter.AspNet.Mvc5.19.4.0.38\lib\net45\Syncfusion.ExcelToPdfConverter.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.ExcelToPdfConverter.AspNet.Mvc5.19.4.0.48\lib\net45\Syncfusion.ExcelToPdfConverter.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.SfChart.WPF">
-      <HintPath>packages\Syncfusion.SfChart.WPF.19.4.0.38\lib\net45\Syncfusion.SfChart.WPF.dll</HintPath>
+      <HintPath>packages\Syncfusion.SfChart.WPF.19.4.0.48\lib\net45\Syncfusion.SfChart.WPF.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.XlsIO.Base">
-      <HintPath>packages\Syncfusion.XlsIO.AspNet.Mvc5.19.4.0.38\lib\net45\Syncfusion.XlsIO.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.XlsIO.AspNet.Mvc5.19.4.0.48\lib\net45\Syncfusion.XlsIO.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.EJ2.Spreadsheet">
-      <HintPath>packages\Syncfusion.EJ2.Spreadsheet.AspNet.MVC5.19.4.0.38\lib\net45\Syncfusion.EJ2.Spreadsheet.dll</HintPath>
+      <HintPath>packages\Syncfusion.EJ2.Spreadsheet.AspNet.MVC5.19.4.0.48\lib\net45\Syncfusion.EJ2.Spreadsheet.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.Licensing">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\Syncfusion.Licensing.19.4.0.38\lib\net45\Syncfusion.Licensing.dll</HintPath>
+      <HintPath>packages\Syncfusion.Licensing.19.4.0.48\lib\net45\Syncfusion.Licensing.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -296,6 +296,7 @@
     <Compile Include="Controllers\Accordion\DefaultFunctionalitiesController.cs" />
     <Compile Include="Controllers\Accordion\IconsController.cs" />
     <Compile Include="Controllers\Accordion\RtlController.cs" />
+    <Compile Include="Controllers\Accordion\KeyboardInteractionController.cs" />
     <Compile Include="Controllers\AutoComplete\CustomFilteringController.cs" />
     <Compile Include="Controllers\AutoComplete\DataBindingController.cs" />
     <Compile Include="Controllers\AutoComplete\DefaultFunctionalitiesController.cs" />
@@ -1103,6 +1104,7 @@
     <Compile Include="Controllers\Tab\RtlController.cs" />
     <Compile Include="Controllers\Tab\WizardController.cs" />
     <Compile Include="Controllers\Tab\DragAndDropController.cs" />
+    <Compile Include="Controllers\Tab\KeyboardInteractionController.cs" />
     <Compile Include="Controllers\TextBoxes\DefaultFunctionalitiesController.cs" />
     <Compile Include="Controllers\TextBoxes\MultilineController.cs" />
     <Compile Include="Controllers\TextBoxes\TextboxForController.cs" />
@@ -1126,6 +1128,7 @@
     <Compile Include="Controllers\Toolbar\DefaultFunctionalitiesController.cs" />
     <Compile Include="Controllers\Toolbar\PopupController.cs" />
     <Compile Include="Controllers\Toolbar\RtlController.cs" />
+    <Compile Include="Controllers\Toolbar\KeyboardInteractionController.cs" />
     <Compile Include="Controllers\Tooltip\AjaxContentController.cs" />
     <Compile Include="Controllers\Tooltip\ApiController.cs" />
     <Compile Include="Controllers\Tooltip\DefaultFunctionalitiesController.cs" />
@@ -1189,6 +1192,7 @@
     <Compile Include="Controllers\TreeGrid\ToolbarTemplateController.cs" />
     <Compile Include="Controllers\TreeGrid\VirtualScrollingController.cs" />
     <Compile Include="Controllers\TreeGrid\InfiniteScrollingController.cs" />
+    <Compile Include="Controllers\TreeGrid\AdaptiveController.cs" />	  
     <Compile Include="Controllers\TreeMap\ColorMappingController.cs" />
     <Compile Include="Controllers\TreeMap\CustomizationController.cs" />
     <Compile Include="Controllers\TreeMap\DatalabelController.cs" />
@@ -2367,6 +2371,7 @@
     <Content Include="Views\Accordion\DefaultFunctionalities.cshtml" />
     <Content Include="Views\Accordion\Icons.cshtml" />
     <Content Include="Views\Accordion\Rtl.cshtml" />
+    <Content Include="Views\Accordion\KeyboardInteraction.cshtml" />
     <Content Include="Views\AutoComplete\CustomFiltering.cshtml" />
     <Content Include="Views\AutoComplete\DataBinding.cshtml" />
     <Content Include="Views\AutoComplete\DefaultFunctionalities.cshtml" />
@@ -3085,6 +3090,7 @@
     <Content Include="Views\Tab\Rtl.cshtml" />
     <Content Include="Views\Tab\Wizard.cshtml" />
     <Content Include="Views\Tab\DragAndDrop.cshtml" />
+    <Content Include="Views\Tab\KeyboardInteraction.cshtml" />
     <Content Include="Views\TextBoxes\DefaultFunctionalities.cshtml" />
     <Content Include="Views\TextBoxes\TextboxFor.cshtml" />
     <Content Include="Views\TimePicker\DefaultFunctionalities.cshtml" />
@@ -3102,6 +3108,7 @@
     <Content Include="Views\Toolbar\DefaultFunctionalities.cshtml" />
     <Content Include="Views\Toolbar\Popup.cshtml" />
     <Content Include="Views\Toolbar\Rtl.cshtml" />
+    <Content Include="Views\Toolbar\KeyboardInteraction.cshtml" />
     <Content Include="Views\Tooltip\AjaxContent.cshtml" />
     <Content Include="Views\Tooltip\Api.cshtml" />
     <Content Include="Views\Tooltip\DefaultFunctionalities.cshtml" />
@@ -3495,6 +3502,7 @@
     <Content Include="Views\Chart\GroupedColumn.cshtml" />
     <Content Include="Views\RichTextEditor\OnlineEditor.cshtml" />
     <Content Include="Views\RichTextEditor\OnlineHtmlEditor.cshtml" />
+    <Content Include="Views\TreeGrid\Adaptive.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\MapData\Africa_continent.json" />
