--- a/NuGet.config
+++ b/NuGet.config
@@ -11,6 +11,7 @@
 	</activePackageSource>
 	<packageSources>
 		<clear/>
+		<add key="Syncfusion EJ2" value="nuget/"/>
 		<add key="NuGet official package source" value="https://api.nuget.org/v3/index.json"/>
 	</packageSources>
 </configuration>
