--- a/.gitleaksignore
+++ b/.gitleaksignore
@@ -22,3 +22,11 @@ Content/styles/tailwind-dark.css:aws-access-token:1
 Content/styles/fluent2.css:aws-access-token:1
 Content/styles/fluent2-dark.css:aws-access-token:1
 Content/styles/fluent2-highcontrast.css:aws-access-token:1
+Content/styles/fluent2-default.css:aws-access-token:1
+Content/styles/fluent2-dark-default.css:aws-access-token:1
+Content/styles/fluent2-highcontrast-default.css:aws-access-token:1
+Content/styles/bootstrap-dark-default.css:aws-access-token:1
+Content/styles/bootstrap-default.css:aws-access-token:1
+Content/styles/tailwind-dark-default.css:aws-access-token:1
+Content/styles/tailwind-default.css:aws-access-token:1
+
