--- a/.gitleaksignore
+++ b/.gitleaksignore
@@ -78,3 +78,4 @@ Content/styles/fluent-dark.css:aws-access-token:1
 Content/styles/fluent.css:aws-access-token:1
 Content/styles/tailwind3.css:easypost-api-token:1
 Content/styles/tailwind3-dark.css:easypost-api-token:1
+Content/styles/highcontrast.css:aws-access-token:1
