--- a/EJ2MVCSampleBrowser.csproj
+++ b/EJ2MVCSampleBrowser.csproj
@@ -32,7 +32,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;$(SyncfusionLicensing)</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;STAGING;$(SyncfusionLicensing)</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -40,9 +40,12 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\</OutputPath>
-    <DefineConstants>TRACE;$(SyncfusionLicensing)</DefineConstants>
+    <DefineConstants>TRACE;RELEASE;STAGING;$(SyncfusionLicensing)</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(STAGING)' != ''">
+	<DefineConstants>$(DefineConstants);STAGING</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Antlr3.Runtime">
@@ -63,83 +66,83 @@
       <HintPath>packages\Microsoft.Owin.4.2.2\lib\net45\Microsoft.Owin.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Owin.Host.SystemWeb, Version=4.2.0.2, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-	  <SpecificVersion>False</SpecificVersion>
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>packages\Microsoft.Owin.Host.SystemWeb.4.2.2\lib\net45\Microsoft.Owin.Host.SystemWeb.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Owin.Security, Version=4.2.0.2, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-	  <HintPath>packages\Microsoft.Owin.Security.4.2.2\lib\net45\Microsoft.Owin.Security.dll</HintPath>
+      <HintPath>packages\Microsoft.Owin.Security.4.2.2\lib\net45\Microsoft.Owin.Security.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-	  <HintPath>packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
       <HintPath>packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.EJ2">
-      <HintPath>packages\Syncfusion.EJ2.MVC5.30.1.37\lib\net462\Syncfusion.EJ2.dll</HintPath>
+      <HintPath>packages\Syncfusion.EJ2.MVC5.30.2.4\lib\net462\Syncfusion.EJ2.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.EJ2.GridExport">
-      <HintPath>packages\Syncfusion.EJ2.GridExport.MVC5.30.1.37\lib\net462\Syncfusion.EJ2.GridExport.dll</HintPath>
+      <HintPath>packages\Syncfusion.EJ2.GridExport.MVC5.30.2.4\lib\net462\Syncfusion.EJ2.GridExport.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.Pdf.Base">
-      <HintPath>packages\Syncfusion.Pdf.AspNet.Mvc5.30.1.37\lib\net462\Syncfusion.Pdf.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.Pdf.AspNet.Mvc5.30.2.4\lib\net462\Syncfusion.Pdf.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.DocIO.Base">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\Syncfusion.DocIO.AspNet.Mvc5.30.1.37\lib\net462\Syncfusion.DocIO.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.DocIO.AspNet.Mvc5.30.2.4\lib\net462\Syncfusion.DocIO.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.EJ2.DocumentEditor">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\Syncfusion.EJ2.WordEditor.AspNet.Mvc5.30.1.37\lib\net462\Syncfusion.EJ2.DocumentEditor.dll</HintPath>
+      <HintPath>packages\Syncfusion.EJ2.WordEditor.AspNet.Mvc5.30.2.4\lib\net462\Syncfusion.EJ2.DocumentEditor.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.EJ2.PdfViewer">
-      <HintPath>packages\Syncfusion.EJ2.PdfViewer.AspNet.Mvc5.30.1.37\lib\net462\Syncfusion.EJ2.PdfViewer.dll</HintPath>
+      <HintPath>packages\Syncfusion.EJ2.PdfViewer.AspNet.Mvc5.30.2.4\lib\net462\Syncfusion.EJ2.PdfViewer.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.OfficeChartToImageConverter.WPF">
-      <HintPath>packages\Syncfusion.OfficeChartToImageConverter.AspNet.Mvc5.30.1.37\lib\net462\Syncfusion.OfficeChartToImageConverter.WPF.dll</HintPath>
+      <HintPath>packages\Syncfusion.OfficeChartToImageConverter.AspNet.Mvc5.30.2.4\lib\net462\Syncfusion.OfficeChartToImageConverter.WPF.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.PdfToImageConverter.Base">
-      <HintPath>packages\Syncfusion.EJ2.PdfViewer.AspNet.Mvc5.30.1.37\lib\net462\Syncfusion.PdfToImageConverter.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.EJ2.PdfViewer.AspNet.Mvc5.30.2.4\lib\net462\Syncfusion.PdfToImageConverter.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.DocToPDFConverter.Base">
-      <HintPath>packages\Syncfusion.DocToPdfConverter.AspNet.Mvc5.30.1.37\lib\net462\Syncfusion.DocToPDFConverter.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.DocToPdfConverter.AspNet.Mvc5.30.2.4\lib\net462\Syncfusion.DocToPDFConverter.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.Compression.Base">
-      <HintPath>packages\Syncfusion.Compression.Base.30.1.37\lib\net462\Syncfusion.Compression.Base.dll</HintPath>
+      <HintPath>packages\\lib\net462\Syncfusion.Compression.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.OfficeChart.Base">
-      <HintPath>packages\Syncfusion.OfficeChart.Base.30.1.37\lib\net462\Syncfusion.OfficeChart.Base.dll</HintPath>
+      <HintPath>packages\\lib\net462\Syncfusion.OfficeChart.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.Presentation.Base">
-      <HintPath>packages\Syncfusion.Presentation.AspNet.Mvc5.30.1.37\lib\net462\Syncfusion.Presentation.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.Presentation.AspNet.Mvc5.30.2.4\lib\net462\Syncfusion.Presentation.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.PresentationToPdfConverter.Base">
-      <HintPath>packages\Syncfusion.PresentationToPdfConverter.AspNet.Mvc5.30.1.37\lib\net462\Syncfusion.PresentationToPdfConverter.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.PresentationToPdfConverter.AspNet.Mvc5.30.2.4\lib\net462\Syncfusion.PresentationToPdfConverter.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.ExcelChartToImageConverter.WPF">
-      <HintPath>packages\Syncfusion.ExcelChartToImageConverter.AspNet.Mvc5.30.1.37\lib\net462\Syncfusion.ExcelChartToImageConverter.WPF.dll</HintPath>
+      <HintPath>packages\Syncfusion.ExcelChartToImageConverter.AspNet.Mvc5.30.2.4\lib\net462\Syncfusion.ExcelChartToImageConverter.WPF.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.ExcelToPDFConverter.Base">
-      <HintPath>packages\Syncfusion.ExcelToPdfConverter.AspNet.Mvc5.30.1.37\lib\net462\Syncfusion.ExcelToPDFConverter.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.ExcelToPdfConverter.AspNet.Mvc5.30.2.4\lib\net462\Syncfusion.ExcelToPDFConverter.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.SfChart.WPF">
-      <HintPath>packages\Syncfusion.SfChart.WPF.30.1.37\lib\net462\Syncfusion.SfChart.WPF.dll</HintPath>
+      <HintPath>packages\\lib\net462\Syncfusion.SfChart.WPF.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.XlsIO.Base">
-      <HintPath>packages\Syncfusion.XlsIO.AspNet.Mvc5.30.1.37\lib\net462\Syncfusion.XlsIO.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.XlsIO.AspNet.Mvc5.30.2.4\lib\net462\Syncfusion.XlsIO.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.EJ2.Spreadsheet">
-      <HintPath>packages\Syncfusion.EJ2.Spreadsheet.AspNet.MVC5.30.1.37\lib\net462\Syncfusion.EJ2.Spreadsheet.dll</HintPath>
+      <HintPath>packages\Syncfusion.EJ2.Spreadsheet.AspNet.MVC5.30.2.4\lib\net462\Syncfusion.EJ2.Spreadsheet.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.Licensing">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\Syncfusion.Licensing.30.1.37\lib\net462\Syncfusion.Licensing.dll</HintPath>
+      <HintPath>packages\\lib\net45\Syncfusion.Licensing.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
-	<Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http.Formatting">
       <HintPath>packages\Microsoft.AspNet.WebApi.Client.6.0.0\lib\net45\System.Net.Http.Formatting.dll</HintPath>
@@ -152,7 +155,7 @@
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web.Http, Version=5.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-	  <SpecificVersion>False</SpecificVersion>
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>packages\Microsoft.AspNet.WebApi.Core.5.3.0\lib\net45\System.Web.Http.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.Http.WebHost">
@@ -167,7 +170,7 @@
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-	  <Private>True</Private>
+      <Private>True</Private>
       <HintPath>packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http">
@@ -175,36 +178,36 @@
     <Reference Include="System.Net.Http.WebRequest">
     </Reference>
     <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-	  <Private>True</Private>
+      <Private>True</Private>
       <HintPath>packages\Microsoft.AspNet.WebPages.3.2.9\lib\net45\System.Web.Helpers.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.Mvc, Version=5.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-	  <Private>True</Private>
+      <Private>True</Private>
       <HintPath>packages\Microsoft.AspNet.Mvc.5.3.0\lib\net45\System.Web.Mvc.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.Optimization">
-	  <Private>True</Private>
+      <Private>True</Private>
       <HintPath>packages\Microsoft.AspNet.Web.Optimization.1.1.3\lib\net40\System.Web.Optimization.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-	  <Private>True</Private>
+      <Private>True</Private>
       <HintPath>packages\Microsoft.AspNet.Razor.3.2.9\lib\net45\System.Web.Razor.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.WebPages, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-	  <Private>True</Private>
+      <Private>True</Private>
       <HintPath>packages\Microsoft.AspNet.WebPages.3.2.9\lib\net45\System.Web.WebPages.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.WebPages.Deployment, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-	  <Private>True</Private>
+      <Private>True</Private>
       <HintPath>packages\Microsoft.AspNet.WebPages.3.2.9\lib\net45\System.Web.WebPages.Deployment.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-	  <Private>True</Private>
+      <Private>True</Private>
       <HintPath>packages\Microsoft.AspNet.WebPages.3.2.9\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="WebGrease">
-	  <Private>True</Private>
+      <Private>True</Private>
       <HintPath>packages\WebGrease.1.6.0\lib\WebGrease.dll</HintPath>
     </Reference>
   </ItemGroup>
@@ -570,7 +573,7 @@
     <Compile Include="Controllers\Chart\RangeStepAreaController.cs" />
     <Compile Include="Controllers\Chart\CylindricalColumnController.cs" />
     <Compile Include="Controllers\Chart\SynchronizedController.cs" />
-	<Compile Include="Controllers\Chart\SeriesAnimationController.cs" />
+    <Compile Include="Controllers\Chart\SeriesAnimationController.cs" />
     <Compile Include="Controllers\ThreeDimensionalChart\BackToBackController.cs" />
     <Compile Include="Controllers\ThreeDimensionalChart\BarController.cs" />
     <Compile Include="Controllers\ThreeDimensionalChart\ColumnController.cs" />
@@ -1083,7 +1086,7 @@
     <Compile Include="Controllers\PdfViewer\FormDesignerController.cs" />
     <Compile Include="Controllers\PdfViewer\AnnotationsController.cs" />
     <Compile Include="Controllers\PdfViewer\ProgrammaticOperationsController.cs" />
-    <Compile Include="Controllers\PdfViewer\InvisibleSignatureController.cs" />
+    <Compile Include="Controllers\PdfViewer\InvisibleDigitalSignatureController.cs" />
     <Compile Include="Controllers\PdfViewer\OrganizePagesController.cs" />
     <Compile Include="Controllers\PdfViewer\ReadOnlyController.cs" />
     <Compile Include="Controllers\PdfViewer\DocumentListController.cs" />
@@ -1260,7 +1263,7 @@
     <Compile Include="Controllers\Schedule\EditorTemplateController.cs" />
     <Compile Include="Controllers\Schedule\EditorValidationController.cs" />
     <Compile Include="Controllers\Schedule\EventsController.cs" />
-	<Compile Include="Controllers\Schedule\EventCalendarController.cs" />
+    <Compile Include="Controllers\Schedule\EventCalendarController.cs" />
     <Compile Include="Controllers\Schedule\EventTemplateController.cs" />
     <Compile Include="Controllers\Schedule\ExcelExportController.cs" />
     <Compile Include="Controllers\Schedule\ExtendedViewsController.cs" />
@@ -1617,7 +1620,7 @@
     </Compile>
     <Compile Include="Helpers\ViewsController.cs" />
     <Compile Include="Models\BlockData.cs" />
-	<Compile Include="Models\AutoFillOptionsModel.cs" />
+    <Compile Include="Models\AutoFillOptionsModel.cs" />
     <Compile Include="Models\DateRangeFormats.cs" />
     <Compile Include="Models\EmployeeMgmt.cs" />
     <Compile Include="Models\EmployeeShiftManagement.cs" />
@@ -3069,15 +3072,15 @@
     <Content Include="Scripts\cldr-data\supplemental\currencyData.json" />
     <Content Include="Scripts\cldr-data\supplemental\numberingSystems.json" />
     <Content Include="Scripts\crossroads.js" />
-	<Content Include="Scripts\bullet-chart\theme-color.js" />
-	<Content Include="Scripts\CircularChart3D\theme-color.js" />
-	<Content Include="Scripts\Progressbar\theme-color.js" />
-	<Content Include="Scripts\range-navigator\theme-color.js" />
-	<Content Include="Scripts\SmithChart\theme-color.js" />
-	<Content Include="Scripts\Sparkline\theme-color.js" />
-	<Content Include="Scripts\StockChartData\theme-color.js" />
-	<Content Include="Scripts\three-dimensional-chart\theme-color.js" />
-	<Content Include="Scripts\chart\theme-color.js" />
+    <Content Include="Scripts\bullet-chart\theme-color.js" />
+    <Content Include="Scripts\CircularChart3D\theme-color.js" />
+    <Content Include="Scripts\Progressbar\theme-color.js" />
+    <Content Include="Scripts\range-navigator\theme-color.js" />
+    <Content Include="Scripts\SmithChart\theme-color.js" />
+    <Content Include="Scripts\Sparkline\theme-color.js" />
+    <Content Include="Scripts\StockChartData\theme-color.js" />
+    <Content Include="Scripts\three-dimensional-chart\theme-color.js" />
+    <Content Include="Scripts\chart\theme-color.js" />
     <Content Include="Scripts\data-service.js" />
     <Content Include="Scripts\datasource.js" />
     <Content Include="Scripts\documenteditor\default-properties.js" />
@@ -3562,7 +3565,7 @@
     <Content Include="Views\DropDownList\GroupingAndIcon.cshtml" />
     <Content Include="Views\DropDownList\Inline.cshtml" />
     <Content Include="Views\DropDownList\Template.cshtml" />
-     <Content Include="Views\DropDownList\Resize.cshtml" />
+    <Content Include="Views\DropDownList\Resize.cshtml" />
     <Content Include="Views\DropDownList\VirtualScroll.cshtml" />
     <Content Include="Views\DropDownList\DropdownlistFor.cshtml" />
     <Content Include="Views\DropDownTree\DefaultFunctionalities.cshtml" />
@@ -3921,7 +3924,7 @@
     <Content Include="Views\Schedule\EditorTemplate.cshtml" />
     <Content Include="Views\Schedule\EditorValidation.cshtml" />
     <Content Include="Views\Schedule\Events.cshtml" />
-	<Content Include="Views\Schedule\EventCalendar.cshtml" />
+    <Content Include="Views\Schedule\EventCalendar.cshtml" />
     <Content Include="Views\Schedule\EventTemplate.cshtml" />
     <Content Include="Views\Schedule\ExtendedViews.cshtml" />
     <Content Include="Views\Schedule\ExternalDragDrop.cshtml" />
@@ -4064,7 +4067,7 @@
     <Content Include="Views\Uploader\Template.cshtml" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\Excel\AutoFilter.cshtml" />
-	<Content Include="Views\Excel\AutoFill.cshtml" />
+    <Content Include="Views\Excel\AutoFill.cshtml" />
     <Content Include="Views\Excel\Slicer.cshtml" />
     <Content Include="Views\Excel\AttendanceTracker.cshtml" />
     <Content Include="Views\Excel\ExpensesReport.cshtml" />
@@ -4353,7 +4356,7 @@
     <Content Include="Views\GanttChart\Zooming.cshtml" />
     <Content Include="Views\TreeGrid\DragAndDrop.cshtml" />
     <Content Include="Views\Diagram\LineRouting.cshtml" />
-	<Content Include="Views\Diagram\AvoidLineOverlap.cshtml" />
+    <Content Include="Views\Diagram\AvoidLineOverlap.cshtml" />
     <Content Include="Views\GanttChart\Exporting.cshtml" />
     <Content Include="Views\GanttChart\AdvanceExporting.cshtml" />
     <Content Include="Views\Excel\CreateMacro.cshtml" />
@@ -4516,7 +4519,7 @@
     <Content Include="Views\Ribbon\RibbonResizing.cshtml" />
     <Content Include="Views\Ribbon\SimplifiedMode.cshtml" />
     <Content Include="Views\PDF\PDFToImage.cshtml" />
-    <Content Include="Views\PdfViewer\InvisibleSignature.cshtml" />
+    <Content Include="Views\PdfViewer\InvisibleDigitalSignature.cshtml" />
     <Content Include="Views\PdfViewer\OrganizePages.cshtml" />
     <Content Include="Views\PdfViewer\ContextMenu.cshtml" />
     <Content Include="Views\Ribbon\RibbonBackstage.cshtml" />
@@ -4561,7 +4564,7 @@
     <Content Include="Views\Chart\LiveChartDataSorting.cshtml" />
     <Content Include="Views\Chart\ChartPagination.cshtml" />
     <Content Include="Views\Chart\ChartCustomAnimation.cshtml" />
-	<Content Include="Views\Chart\SeriesAnimation.cshtml" />
+    <Content Include="Views\Chart\SeriesAnimation.cshtml" />
     <Content Include="Views\Chart\RoundedCorner.cshtml" />
     <Content Include="Views\Grid\FilterBarTemplate.cshtml" />
     <Content Include="Views\Chart\ColumnDrilldown.cshtml" />
